syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.william";
option java_outer_classname = "ChavePixOuterClassName";

package com.william;

service ChavePixService {

  rpc registra(CadastraChavePixRequest) returns (CadastraChavePixResponse) {}
}

enum TipoDaChave {
  UNKNOWN_TIPO_CHAVE = 0;
  CPF = 1;
  CELULAR = 2;
  EMAIL = 3;
  CHAVE_ALEATORIA = 4;
}

enum TipoDaConta {
  UNKNOWN_TIPO_CONTA = 0;
  CONTA_CORRENTE = 1;
  CONTA_POUPANCA = 2;
}

message CadastraChavePixRequest {
  string idCliente = 1;
  TipoDaChave tipoDaChave = 2;
  string valorChave = 3;
  TipoDaConta tipoDaConta = 4;

}

message CadastraChavePixResponse {
  string pixId = 1;
  string clienteId = 2;

}

